--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Sujith Naapa Ramesh</title>
+  <title>Resume - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Sujith Naapa Ramesh</span>
+      <span class="d-block d-lg-none">Clarence Taylor</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -47,13 +47,13 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="Blogs.html">Blog</a>
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
         </li>
       </ul>
     </div>
@@ -63,19 +63,25 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Sujith
-          <span class="text-primary">Naapa Ramesh</span>
+        <h1 class="mb-0">Clarence
+          <span class="text-primary">Taylor</span>
         </h1>
-        <div class="subheading mb-5">2 Highland Ln. · Littleton, MA 01460 · (978) 631-9606 ·
-          <a href="mailto:name@email.com">sn438@cornell.edu</a>
+        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
+          <a href="mailto:name@email.com">name@email.com</a>
         </div>
-        <p class="lead mb-5">I am a junior ECE and CS student at Cornell University. I am particularly interested in computer architecture, embedded design, systems programming, and back-end development. I am also currently looking for internships for Summer 2020, so please feel free to contact me at sn438@cornell.edu. </p>
+        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/">
+          <a href="#">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/sn438">
+          <a href="#">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="#">
+            <i class="fab fa-facebook-f"></i>
           </a>
         </div>
       </div>
@@ -89,36 +95,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Electronics Subteam Member</h3>
-            <div class="subheading mb-3">Cornell Baja Racing</div>
-            <p> I am an Electrical Engineer on Cornell Baja Racing, an engineering project team at Cornell University. My duties are primarily test engineering oriented as I am in charge of testing various components on the competitive off-road racing vehicle the team builds. As an engineer on Cornell Baja, I am often collaborating with a team of forty mechanical engineers and six electrical engineers to design testing equiment, analyze data, and apply results to build an off road racing vehicle.</p> 
-			</div>
+            <h3 class="mb-0">Senior Web Developer</h3>
+            <div class="subheading mb-3">Intelitec Solutions</div>
+            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+          </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - Present</span>
+            <span class="text-primary">March 2013 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3">Digital Logic and Computer Organization Class at Cornell University</div>
-            <p>As a teaching assistant for the Digital Logic and Computer Organization Class at Cornell University, I am mainly responsible for guiding lab sections and holding office hours. During lab sections, I help students debug their Verilog projects on their Alter FPGA boards, and during office hours, I help clarify difficult concepts related to digital logic and Verilog. In addition, I help proctor and grade exams.</p>
-			</div>
+            <h3 class="mb-0">Web Developer</h3>
+            <div class="subheading mb-3">Intelitec Solutions</div>
+            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+          </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - Present</span>
+            <span class="text-primary">December 2011 - March 2013</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Software Engineering Intern</h3>
-            <div class="subheading mb-3">PlumChoice Inc.</div>
-            <p> I interned as a software engineer during school breaks at PlumChoice Inc. During this time, I programmed for the for Bolt-On Ordering and Sales Tool (BOOST) sales platform for AT&T. During this time, I helped recreate some of the data display mechanisms on the BOOST sales platform by using jQuery DataTables and by rewriting SQL queries accessing the customer database. I most recently worked on an automated deployment system for the project by writing Bash and Oracle Weblogic Jython scripts on a Linux platform.</p>  
-		   </div>
+            <h3 class="mb-0">Junior Web Designer</h3>
+            <div class="subheading mb-3">Shout! Media Productions</div>
+            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+          </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017 - August 2017, January 2018, June 2018 - August 2018</span>
+            <span class="text-primary">July 2010 - December 2011</span>
           </div>
         </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Web Design Intern</h3>
+            <div class="subheading mb-3">Shout! Media Productions</div>
+            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2008 - June 2010</span>
+          </div>
+        </div>
+
       </div>
 
     </section>
@@ -131,24 +149,24 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cornell University</h3>
+            <h3 class="mb-0">University of Colorado Boulder</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Electrical and Computer Engineering</div>
-            <p>GPA: 3.66</p>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - December 2020</span>
+            <span class="text-primary">August 2006 - May 2010</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Littleton High School</h3>
-            <div class="subheading mb-3">Salutatorian</div>
-            <p>GPA: 4.91</p>
+            <h3 class="mb-0">James Buchanan High School</h3>
+            <div class="subheading mb-3">Technology Magnet Program</div>
+            <p>GPA: 3.56</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2013 - June 2017</span>
+            <span class="text-primary">August 2002 - May 2006</span>
           </div>
         </div>
 
@@ -157,69 +175,113 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Resume</h2>
-			<iframe src="downloads/Resume-SujithNaapaRamesh.pdf" width="100%" height="500px">
-    </iframe>
+        <h2 class="mb-5">Skills</h2>
+
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="list-inline dev-icons">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-angular"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-node-js"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-sass"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-less"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-wordpress"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-gulp"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-grunt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-npm"></i>
+          </li>
+        </ul>
+
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Mobile-First, Responsive Design</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Browser Testing &amp; Debugging</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Functional Teams</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development &amp; Scrum</li>
+        </ul>
+      </div>
     </section>
 
     <hr class="m-0">
 
-	  <!-- Portfolio Grid Section -->
-  <section class="portfolio p-3 p-lg-5" id="projects">
-  <div class="w-100">
-        <h2 class="mb-5">Projects</h2>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-4">
-          <a class="portfolio-item d-block mx-auto" href="DAQLite.html">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-				<div class="subheading mb-3"> DAQLite </div>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/DAQLite.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <a class="portfolio-item d-block mx-auto" href="TwitchDoesArt.html">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-				<div class="subheading mb-3"> Twitch Does Art </div>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/TwitchDoesArt.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <a class="portfolio-item d-block mx-auto" href="Critterworld.html">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-				<div class="subheading mb-3"> Critterworld </div>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/Critterworld.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-6 col-lg-4">
-          <a class="portfolio-item d-block mx-auto" href="CNCMachine.html">
-            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                <i class="fas fa-search-plus fa-3x"></i>
-				<div class="subheading mb-3"> CNC Machine </div>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/CNCMachine.jpg" alt="">
-          </a>
-        </div>
-        
-  </section>
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Interests</h2>
+        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+      </div>
+    </section>
 
     <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Google Analytics Certified Developer</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Mobile Web Specialist - Google Certification</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            2<sup>nd</sup>
+            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - James Buchanan High School - Hackathon 2006</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            3<sup>rd</sup>
+            Place - James Buchanan High School - Hackathon 2005</li>
+        </ul>
+      </div>
+    </section>
 
   </div>
 
@@ -232,20 +294,6 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
-  
-  <script>
-    // Modal popup$(function () {
-  $('.portfolio-item').magnificPopup({
-    type: 'inline',
-    preloader: false,
-    focus: '#username',
-    modal: true
-  });
-  $(document).on('click', '.portfolio-modal-dismiss', function(e) {
-    e.preventDefault();
-    $.magnificPopup.close();
-  });
-  </script>
 
 </body>
 
