--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <hr class="m-0">
 
 	  <!-- Portfolio Grid Section -->
-  <section class="portfolio p-3 p-lg-5" id="projects">
+  <section class="resume-section portfolio p-3 p-lg-5 d-flex align-items-center" id="projects">
   <div class="w-100">
         <h2 class="mb-5">Projects</h2>
     <div class="container">
@@ -180,7 +180,7 @@
 				<div class="subheading mb-3"> DAQLite </div>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/DAQLite.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/DAQLite.JPG" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
