--- a/CNCMachine.html
+++ b/CNCMachine.html
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-secondary text-uppercase mb-0">CNC Machine</h2>
-            <img class="img-fluid mb-5" src="img/portfolio/CNCMachine.jpg" alt="">
+            <img class="img-fluid mb-5" src="img/portfolio/CNCMachine.JPG" alt="">
             <p class="mb-5"> This desktop CNC machine was built using primarily 3D printed and laser cut parts. My partner Nathan Johnson and I found the plans for this machine on Thingiverse: https://www.instructables.com/id/3D-printed-CNC-mill/ and we modified the system to fit our needs. We 3D printed and laser cut the parts for the project in house and did the electronics for the machine ourselves. The CNC Machine was controlled by an Arduino which was rooted to run grbl on it. The Arduino connected three stepper motors through stepper motor drivers which controlled the three axes of the machine; the Arduino controlled the spindle motor using a relay. To ensure that the CNC Machine was as safe as it possibly could be, we added limit switches to the six edges of the axes to ensure that the CNC Machine shut down if it accidentally hit a corner. Finally, we added an emergency stop button to the machine to shut down power to the machine in case of emergencies. For additional details on the CNC machine refer to the design document I have written for the project:   
 				<a href="downloads/sn438_CNC Machine Report_Fa17.pdf" download> CNC Machine Design Document.<a> </p>
 			<a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="index.html#projects">
