--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<div class="subheading mb-3"> CNC Machine </div>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/CNCMachine.jpg" alt="">
+            <img class="img-fluid" src="img/portfolio/CNCMachine.JPG" alt="">
           </a>
         </div>
         
