--- a/Blogs.html
+++ b/Blogs.html
@@ -61,7 +61,7 @@
 
   <div class="container-fluid p-0">
 
- <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+ <section class="resume-section p-3 p-lg-5 d-flex align-items-center justify-content-center" id="blogs">
       <div class="w-100">
         <h2 class="mb-5">Blog</h2>
 
