--- a/TwitchDoesArt.html
+++ b/TwitchDoesArt.html
@@ -81,8 +81,7 @@
 			</div>
 			<br>
 		<p class = "mb-5"> The following is our video presentation at Cornell University Make-a-thon:</p>
-		<video class="img-fluid mb-5" controls="controls" 
-       name="TwitchDoesArt" src="img/portfolio/TwitchDoesArt.mov"></video>			
+		<iframe src="https://drive.google.com/file/d/1XNh4CYJF6iaur0uRZxP50xGHzfxioSN6/preview" width="640" height="480"></iframe>	
 	   <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="index.html#projects">
 			  <i class="fa fa-close"></i>
               Close Project</a> 
