--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           <span class="text-primary">Naapa Ramesh</span>
         </h1>
         <div class="subheading mb-5">2 Highland Ln. · Littleton, MA 01460 · (978) 631-9606 ·
-          <a href="mailto:name@email.com">sn438@cornell.edu</a>
+          <a href="mailto:name@email.com">sn438@cornell.edu </a>
         </div>
         <p class="lead mb-5">I am a junior ECE and CS student at Cornell University. I am particularly interested in computer architecture, embedded design, systems programming, and back-end development. I am also currently looking for internships for Summer 2020, so please feel free to contact me at sn438@cornell.edu. </p>
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/">
+          <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/sn438">
+          <a href="https://github.com/sn438" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
