--- a/Critterworld.html
+++ b/Critterworld.html
@@ -78,7 +78,7 @@
             <img class="img-fluid mb-5" src="img/portfolio/Critterworld.jpg" alt="">
 			<p class = "mb-5"> I built this project with Andy Zhu and Rishi Advani for my CS 2112: Object-Oriented Design and Data Structures (Honors) class. My partners and I built a game that modeled Conway's Game of Life for this final project. The game relied on critters that had sophisticated actions associated with them and a critter language that could be used to control their moves. The game first takes in commands for each critter from a user in the form of a text file and then uses an abstract syntax parser to determine the actions each critter needs to commit over discrete time steps. These actions were then displayed on a JavaFX GUI for the user to more clearly see the lives of their critters. Server capabilities  were also added to the game so that users are able to play their critters on a server with while viewing the lives of all the critters on their own screen. Additionally, users can use their own instance of the game to host critters from other clients. I was personally in charge of writing the abstract syntax parser, writing the GUI tiling functions and other GUI functionality, as well as adding server capabilities to the game. Click on the Git logo to continue to the public repository where I have uploaded my code.  
 			<div class="social-icons">
-				<a href="https://github.com/sn438/critterworld">
+				<a href="https://github.com/sujithnr/critterworld" target="_blank">
 					<i class="fab fa-github"></i>
 				</a>
 			</div>
