--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">2 Highland Ln. · Littleton, MA 01460 · (978) 631-9606 ·
           <a href="mailto:sn438@cornell.edu">sn438@cornell.edu </a>
         </div>
-        <p class="lead mb-5">I am a junior ECE and CS student at Cornell University. I am particularly interested in computer architecture, embedded design, systems programming, and back-end development. I am also currently looking for internships for Summer 2020, so please feel free to contact me at sn438@cornell.edu. </p>
+        <p class="lead mb-5">I am a junior ECE and CS student at Cornell University. I am particularly interested in computer architecture, embedded design, systems programming, and IoT technology. I am also currently looking for internships for Summer 2020, so please feel free to contact me at sn438@cornell.edu. </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -86,6 +86,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Software Controls Intern</h3>
+            <div class="subheading mb-3">Gerber Technology</div>
+            <p> As a Software Controls Intern at Gerber Technology, I explored automation technologies through the use of Beckhoff PLCs and EtherCAT fieldbus. I implemented a software testing interface for the head of a CNC cutter using a Structured Text program that I wrote. I was able to use Beckhoff Motion, an implementatin of PLCopen, to accurately control the position and velocity of motors on the head of the CNC cutter. I sourced an uninterruptible power supply for the new electronics box of a CNC cutter. Finally, I prototyped an electronics system based off a Beckhoff PLC and EtherCAT for a CNC spreader.</p> 
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - August 2019</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -102,10 +113,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Teaching Assistant</h3>
             <div class="subheading mb-3">Digital Logic and Computer Organization Class at Cornell University</div>
-            <p>As a teaching assistant for the Digital Logic and Computer Organization Class at Cornell University, I am mainly responsible for guiding lab sections and holding office hours. During lab sections, I help students debug their Verilog projects on their Alter FPGA boards, and during office hours, I help clarify difficult concepts related to digital logic and Verilog. In addition, I help proctor and grade exams.</p>
+            <p>As a teaching assistant for the Digital Logic and Computer Organization Class at Cornell University, I was mainly responsible for guiding lab sections and holding office hours. During lab sections, I helped students debug their Verilog projects on their Alter FPGA boards, and during office hours, I helped clarify difficult concepts related to digital logic and Verilog. In addition, I helped proctor and grade exams.</p>
 			</div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - Present</span>
+            <span class="text-primary">August 2018 - December 2018</span>
           </div>
         </div>
 
@@ -134,7 +145,7 @@
             <h3 class="mb-0">Cornell University</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Electrical and Computer Engineering</div>
-            <p>GPA: 3.66</p>
+            <p>GPA: 3.627</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2020</span>
