GitHub name change

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/sn438" target="_blank">
+          <a href="https://github.com/sujithnr" target="_blank">
             <i class="fab fa-github"></i>
           </a>
         </div>
