--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
         <h2 class="mb-5">Projects</h2>
     <div class="container">
       <div class="row">
+
+          <div class="col-md-6 col-lg-4">
+              <a class="portfolio-item d-block mx-auto" href="CloudandCard.html">
+                <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+                  <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                    <i class="fas fa-search-plus fa-3x"></i>
+            <div class="subheading mb-3"> CloudandCard </div>
+                  </div>
+                </div>
+                <img class="img-fluid" src="img/portfolio/CloudandCard.jpg" alt="">
+              </a>
+            </div>
+
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="DAQLite.html">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -194,6 +207,7 @@
             <img class="img-fluid" src="img/portfolio/DAQLite.JPG" alt="">
           </a>
         </div>
+
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="TwitchDoesArt.html">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -205,6 +219,7 @@
             <img class="img-fluid" src="img/portfolio/TwitchDoesArt.jpg" alt="">
           </a>
         </div>
+
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="Critterworld.html">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -216,6 +231,7 @@
             <img class="img-fluid" src="img/portfolio/Critterworld.jpg" alt="">
           </a>
         </div>
+        
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="CNCMachine.html">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
