--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
         
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Electronics Subteam Member</h3>
+            <div class="subheading mb-3">Cornell Cup Robotics</div>
+            <p> I am a member of Cornell Cup Robotics which is an engineering project team at Cornell University. I am responsible for designing the locomotion system for our R2D2 robot as well as building our robot communication systems. My role as an electrical engineer on Cup often involves me working alongside mechanical engineers, programmers, and other electrical engineers in an interdiciplinary setting.</p> 
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2017 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Software Controls Intern</h3>
             <div class="subheading mb-3">Gerber Technology</div>
             <p> As a Software Controls Intern at Gerber Technology, I explored automation technologies through the use of Beckhoff PLCs and EtherCAT fieldbus. I implemented a software testing interface for the head of a CNC cutter using a Structured Text program that I wrote. I was able to use Beckhoff Motion, an implementatin of PLCopen, to accurately control the position and velocity of motors on the head of the CNC cutter. I sourced an uninterruptible power supply for the new electronics box of a CNC cutter. Finally, I prototyped an electronics system based off a Beckhoff PLC and EtherCAT for a CNC spreader.</p> 
@@ -102,7 +113,7 @@
           <div class="resume-content">
             <h3 class="mb-0">Electronics Subteam Member</h3>
             <div class="subheading mb-3">Cornell Baja Racing</div>
-            <p> I am an Electrical Engineer on Cornell Baja Racing, an engineering project team at Cornell University. My duties are primarily test engineering oriented as I am in charge of testing various components on the competitive off-road racing vehicle the team builds. As an engineer on Cornell Baja, I am often collaborating with a team of forty mechanical engineers and six electrical engineers to design testing equiment, analyze data, and apply results to build an off road racing vehicle.</p> 
+            <p> I was an Electrical Engineer on Cornell Baja Racing, an engineering project team at Cornell University. My duties were primarily test engineering oriented as I am in charge of testing various components on the competitive off-road racing vehicle the team builds. As an engineer on Cornell Baja, I am often collaborating with a team of forty mechanical engineers and six electrical engineers to design testing equiment, analyze data, and apply results to build an off road racing vehicle.</p> 
 			</div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - Present</span>
@@ -145,7 +156,7 @@
             <h3 class="mb-0">Cornell University</h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Electrical and Computer Engineering</div>
-            <p>GPA: 3.627</p>
+            <p>GPA: 3.681</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2020</span>
