--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p> I was an Electrical Engineer on Cornell Baja Racing, an engineering project team at Cornell University. My duties were primarily test engineering oriented as I am in charge of testing various components on the competitive off-road racing vehicle the team builds. As an engineer on Cornell Baja, I am often collaborating with a team of forty mechanical engineers and six electrical engineers to design testing equiment, analyze data, and apply results to build an off road racing vehicle.</p> 
 			</div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2017 - Present</span>
+            <span class="text-primary">August 2017 - May 2019</span>
           </div>
         </div>
 
