New Project and Updated Experience

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">2 Highland Ln. · Littleton, MA 01460 · (978) 631-9606 ·
           <a href="mailto:sn438@cornell.edu">sn438@cornell.edu </a>
         </div>
-        <p class="lead mb-5">I am a junior ECE and CS student at Cornell University. I am particularly interested in computer architecture, embedded design, systems programming, and IoT technology. I am also currently looking for internships for Summer 2020, so please feel free to contact me at sn438@cornell.edu. </p>
+        <p class="lead mb-5">I am a senior ECE and CS student at Cornell University who is also expected to graduate with an M.Eng in ECE in May 2021. I am particularly interested in computer architecture, embedded design, systems programming, and IoT technology. I am also currently looking for a full-time job for Summer 2021, so please feel free to contact me at sn438@cornell.edu.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/sujith-naapa-ramesh/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -86,7 +86,50 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
-        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Master of Engineering Project</h3>
+            <div class="subheading mb-3">Christina Delimitrou Group, Cornell University</div>
+            <p> I studied hardware acceleration of microservices on an FPGA.</p> 
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Teaching Assistant</h3>
+            <div class="subheading mb-3">Computer Architecture Class at Cornell University</div>
+            <p>As a teaching assistant for the Computer Architecture Class at Cornell University, I assisted students with their SystemVerilog projects and graded assignments and exams.</p>
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Product Test Engineer Intern</h3>
+            <div class="subheading mb-3">Silicon Labs</div>
+            <p> I worked as a Product Test Engineering Intern virtually at Silicon Labs on their Ultra Low Jitter Oscillator Product. My project involved studying Poly resistors as they varied across corners and seeing if a three-bit coarse trim helped control for process variation. In addition, I helped verify the linearity of an ADC on the chip I was working on. Through this experience, I was exposed to various IC testing methodologies. In addition, I was able to practice writing firmware, Perl, and Python to interface with the design under test, collect data, and process data. </p> 
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2020 - August 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Teaching Assistant</h3>
+            <div class="subheading mb-3">Introduction to Probability and Inference for Random Signals and Systems Class at Cornell University</div>
+            <p>As a teaching assistant for the Introduction to Probability and Inference for Random Signals and Systems Class at Cornell University, I was mainly responsible for assistingstudent with their problem sets and grading student exams and assignments.</p>
+			</div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2020 - May 2020</span>
+          </div>
+        </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Electronics Subteam Member</h3>
@@ -138,7 +181,7 @@
             <p> I interned as a software engineer during school breaks at PlumChoice Inc. During this time, I programmed for the for Bolt-On Ordering and Sales Tool (BOOST) sales platform for AT&T. During this time, I helped recreate some of the data display mechanisms on the BOOST sales platform by using jQuery DataTables and by rewriting SQL queries accessing the customer database. I most recently worked on an automated deployment system for the project by writing Bash and Oracle Weblogic Jython scripts on a Linux platform.</p>  
 		   </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017 - August 2017, January 2018, June 2018 - August 2018</span>
+            <span class="text-primary">June 2017 - August 2017, June 2018 - August 2018</span>
           </div>
         </div>
       </div>
@@ -154,9 +197,20 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Cornell University</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
+            <div class="subheading mb-3">Master of Engineering</div>
             <div>Electrical and Computer Engineering</div>
-            <p>GPA: 3.681</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2020 - May 2021</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Cornell University</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Electrical and Computer Engineering with a Minor in Computer Science</div>
+            <p>GPA: 3.764</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2020</span>
@@ -196,14 +250,14 @@
       <div class="row">
 
           <div class="col-md-6 col-lg-4">
-              <a class="portfolio-item d-block mx-auto" href="CloudandCard.html">
+              <a class="portfolio-item d-block mx-auto" href="PICBall.html">
                 <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
                   <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
                     <i class="fas fa-search-plus fa-3x"></i>
-            <div class="subheading mb-3"> CloudandCard </div>
+            <div class="subheading mb-3"> PICBall </div>
                   </div>
                 </div>
-                <img class="img-fluid" src="img/portfolio/CloudandCard.jpg" alt="">
+                <img class="img-fluid" src="img/portfolio/PICBall.JPG" alt="">
               </a>
             </div>
 
