--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@
         <h2 class="mb-5">Projects</h2>
     <div class="container">
       <div class="row">
+        
+        <div class="col-md-6 col-lg-4">
+          <a class="portfolio-item d-block mx-auto" href="RISC-V.html">
+            <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+                <i class="fas fa-search-plus fa-3x"></i>
+              <div class="subheading mb-3"> Multicore RISC-V Processor </div>
+              </div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/RISC-V.PNG" alt="">
+          </a>
+        </div>
 
           <div class="col-md-6 col-lg-4">
               <a class="portfolio-item d-block mx-auto" href="PICBall.html">
