--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
               <div class="subheading mb-3"> Multicore RISC-V Processor </div>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/RISC-V.PNG" alt="">
+            <img class="img-fluid" src="img/portfolio/RISC-V.png" alt="">
           </a>
         </div>
 
